0.8.0/_sources/generated/statsmodels.regression.quantile_regression.QuantRegResults.rst.txt
statsmodels.regression.quantile_regression.QuantRegResults
==========================================================

.. currentmodule:: statsmodels.regression.quantile_regression

.. autoclass:: QuantRegResults

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
    
      ~QuantRegResults.HC0_se
    
    
      ~QuantRegResults.HC1_se
    
    
      ~QuantRegResults.HC2_se
    
    
      ~QuantRegResults.HC3_se
    
    
    
      ~QuantRegResults.aic
    
    
      ~QuantRegResults.bic
    
    
      ~QuantRegResults.bse
    
    
      ~QuantRegResults.centered_tss
    
    
      ~QuantRegResults.compare_f_test
    
    
      ~QuantRegResults.compare_lm_test
    
    
      ~QuantRegResults.compare_lr_test
    
    
      ~QuantRegResults.condition_number
    
    
      ~QuantRegResults.conf_int
    
    
      ~QuantRegResults.cov_HC0
    
    
      ~QuantRegResults.cov_HC1
    
    
      ~QuantRegResults.cov_HC2
    
    
      ~QuantRegResults.cov_HC3
    
    
      ~QuantRegResults.cov_params
    
    
      ~QuantRegResults.eigenvals
    
    
      ~QuantRegResults.ess
    
    
      ~QuantRegResults.f_pvalue
    
    
      ~QuantRegResults.f_test
    
    
      ~QuantRegResults.fittedvalues
    
    
      ~QuantRegResults.fvalue
    
    
      ~QuantRegResults.get_prediction
    
    
      ~QuantRegResults.get_robustcov_results
    
    
      ~QuantRegResults.initialize
    
    
      ~QuantRegResults.llf
    
    
      ~QuantRegResults.load
    
    
      ~QuantRegResults.mse
    
    
      ~QuantRegResults.mse_model
    
    
      ~QuantRegResults.mse_resid
    
    
      ~QuantRegResults.mse_total
    
    
      ~QuantRegResults.nobs
    
    
      ~QuantRegResults.normalized_cov_params
    
    
      ~QuantRegResults.predict
    
    
      ~QuantRegResults.prsquared
    
    
      ~QuantRegResults.pvalues
    
    
      ~QuantRegResults.remove_data
    
    
      ~QuantRegResults.resid
    
    
      ~QuantRegResults.resid_pearson
    
    
      ~QuantRegResults.rsquared
    
    
      ~QuantRegResults.rsquared_adj
    
    
      ~QuantRegResults.save
    
    
      ~QuantRegResults.scale
    
    
      ~QuantRegResults.ssr
    
    
      ~QuantRegResults.summary
    
    
      ~QuantRegResults.summary2
    
    
      ~QuantRegResults.t_test
    
    
      ~QuantRegResults.tvalues
    
    
      ~QuantRegResults.uncentered_tss
    
    
      ~QuantRegResults.wald_test
    
    
      ~QuantRegResults.wald_test_terms
    
    
      ~QuantRegResults.wresid
    
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~QuantRegResults.use_t
   
   